2008-09-15	Dmitry Dulepov	<dmitry@typo3.org>

	* Added extension updater
	* Fixed missing </head> in the template
	* Released version 1.1.1

2008-09-01	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed: wrong check for missing TS template
	* Removed duplicate $cObj from pi1 class
	* Removed restriction to TYPO3 4.2 as highest TYPO3 version

2008-08-30 Martin Holtz <typo3@martinholtz.de>

	* Fixed bug #1150: incorrect sql with emptySearchAtStart

2008-02-29  Michiel Roos  <extensions@netcreators.com>

	* Fixed bug #8122: Toogle doesn't work

2008-02-25	Dmitry Dulepov	<dmitry@typo3.org>

	* Renamed JavaScript functions to have extension id as prefix
	* Moved all inline CSS styles to CSS classes
	* Changed expand/collapse in dynamic view to use CSS classes instead of inline style (to be print-friendly)
	* Commented obsolete TS template named "CSS default styles"
	* Fixed icon paths: did not expand from constants at some TYPO3 installations
	* Added hook to page module to display extended information (TYPO3>=4.2)

2008-02-22	Dmitry Dulepov	<dmitry@typo3.org>

	* Added posibility to override sys_language_mode/sys_language_overlay for records

2008-02-01	Dmitry Dulepov	<dmitry@typo3.org>

	* Changed localization to use content.sys_language_overlay option correctly
	* Updated documentation

2008-01-31	Dmitry Dulepov	<dmitry@typo3.org>

	* Changed to use ratings extension instead of built-in rated feature
	* Changed inclusion of the plugin to show error message if TS template is not included
	* Initial work on localization feature

2008-01-19	Dmitry Dulepov	<dmitry@typo3.org>

	* Committed some fies for ratings feature
	* Changed TYPO3 logo in the manual

2007-12-14	Patrick Broens	<patrick@netcreators.com>

	* Moved icons to folder 'res'
	* Removed addPItoST43 method and moved constants and setup to static template list
	* Deleted old unused files
	* Moved flexform.xml into own folder
	* Splitted TCA files for each table and moved to TCA folder
