@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>FAQ Example Template</title>
 <!-- ###HEADER_PARTS### -->
-<link rel="stylesheet" href="###SITE_REL_PATH###res/styles.css" />
+<link rel="stylesheet" type="text/css" href="###SITE_REL_PATH###res/styles.css" />
 <!-- ###HEADER_PARTS### -->
 </head>
 <body>
